--- a/blog_summariser/package.json
+++ b/blog_summariser/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^1.10.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.51.0",
     "axios": "^1.10.0",
